# id3-music-organiser

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml
features/: organise.feature
src/: main.rs
tests/: cucumber.rs
