[package]
name = "id3org"
version = "0.1.1"
authors = ["Craig Mayhew"]

[dependencies]
colored = "1.6"
id3 = "0.2.5"
lazy_static = "1.2.0"
regex = "1"
walkdir = "2"
# needed for reading command line arguements
docopt = "1"
serde = "1.0" # if you're using `derive(Deserialize)`
serde_derive = "1.0" # if you're using `derive(Deserialize)`