[package]
name = "id3org"
version = "0.1.1"
authors = ["Craig Mayhew"]

[dependencies]
colored = "2.0"
cucumber_rust = { version = "^0.7.3", default-features = false }
id3 = "0.5.1"
lazy_static = "1.2.0"
regex = "1"
walkdir = "2"
# needed for reading command line arguements
docopt = "1"
serde = "1.0" # if you're using `derive(Deserialize)`
serde_derive = "1.0" # if you're using `derive(Deserialize)`

[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest